[project]
name = "cogno-meter"
version = "0.1.0"
description = "Usage metering + pricing/overage for the Cogno cognitive pipeline — cross-modality (LLM/embedding tokens + STT/TTS chars) billable-token accounting against a plan allowance"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Vinicius Vale" }]
maintainers = [{ name = "Sudoers AI" }]
keywords = ["metering", "billing", "pricing", "tokens", "usage", "llm", "overage", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
# Pure code: no third-party runtime dependency. The host loads its pricing config
# (YAML/JSON/DB) and hands a plain mapping to PriceBook.from_mapping.
dependencies = []

[project.urls]
Homepage = "https://github.com/sudoers-ai/cogno-meter"
Repository = "https://github.com/sudoers-ai/cogno-meter"
Issues = "https://github.com/sudoers-ai/cogno-meter/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.8",
]

[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cogno_meter*"]

[tool.setuptools.package-data]
cogno_meter = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
files = ["cogno_meter"]
warn_unused_ignores = true
